--- a/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
+++ b/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
@@ -7,25 +7,21 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+<body style="padding-top:unset; padding-bottom:unset">
+    <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-        @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                <li>@Html.ActionLink("Region", "Index", "Region")</li>
+        @Html.ActionLink("Mis Entidades", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-link navbar-brand">@Html.ActionLink("Home", "Index", "Home")</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("About", "About", "Home")</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Contact", "Contact", "Home")</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Region", "Index", "Region")</li>
             </ul>
         </div>
-    </nav>
+    </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
