--- a/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
+++ b/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
@@ -24,9 +24,9 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+        <br>
+        <footer class="text-center">
+            <p>&reg; @(DateTime.Now.Year+991) - The Northwind Application</p>
         </footer>
     </div>
 
