--- a/Lab.EF/Lab.EF.MVC/Views/Region/Index.cshtml
+++ b/Lab.EF/Lab.EF.MVC/Views/Region/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model List<Lab.EF.MVC.Models.RegionView>
 
 @{
-    ViewBag.Title = "Region Page";
+    ViewBag.Title = "Regiones";
 }
 
-<h1>Hola soy el Index de Region</h1>
+<h1>Tabla de regiones</h1>
 
-<table class="table table-striped table-dark">
+<table class="table table-striped table-dark rounded-lg table-borderless">
     <thead>
         <tr>
             <th scope="col">ID</th>
