--- a/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
+++ b/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
@@ -15,10 +15,12 @@
         @Html.ActionLink("Mis Entidades", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-link navbar-brand">@Html.ActionLink("Home", "Index", "Home")</li>
-                <li class="nav-link navbar-brand">@Html.ActionLink("About", "About", "Home")</li>
-                <li class="nav-link navbar-brand">@Html.ActionLink("Contact", "Contact", "Home")</li>
-                <li class="nav-link navbar-brand">@Html.ActionLink("Region", "Index", "Region")</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Casa", "Index", "Home", new { area = "" }, new { @class = "nav-link active" })</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Sobre Que?", "About", "Home", new { area = "" }, new { @class = "nav-link active" })</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Contacto", "Contact", "Home", new { area = "" }, new { @class = "nav-link active" })</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Region", "Index", "Region", new { area = "" }, new { @class = "nav-link active" })</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Categorias", "Index", "Categories", new { area = "" }, new { @class = "nav-link active" })</li>
+
             </ul>
         </div>
     </div>
