--- a/Lab.EF/Lab.EF.MVC/Views/Region/Insert.cshtml
+++ b/Lab.EF/Lab.EF.MVC/Views/Region/Insert.cshtml
@@ -1,9 +1,9 @@
 ﻿@model Lab.EF.MVC.Models.RegionView
 @{
-    ViewBag.Title = "Region Page";
+    ViewBag.Title = "Region Insertar";
 }
 
-<h1>Vista para Insertar</h1>
+<h1>Insertar Region</h1>
 
 @using (Html.BeginForm("Insert", "Region", FormMethod.Post)) 
 {
