--- a/Lab.EF/Lab.EF.MVC/Views/Categories/Insert.cshtml
+++ b/Lab.EF/Lab.EF.MVC/Views/Categories/Insert.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("Insert", "Categories", FormMethod.Post))
 {
     <label>Nombre: </label> @Html.TextBoxFor(c => c.CategoryName)
-    <label>Decription: </label> @Html.TextBoxFor(c => c.Description)
+    <label>Apellidos: </label> @Html.TextBoxFor(c => c.Description)
 
     <input type="submit" class="btn btn-success" value="Guardar" />
 }
