--- a/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
+++ b/Lab.EF/Lab.EF.MVC/Views/Shared/_Layout.cshtml
@@ -16,11 +16,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-link navbar-brand">@Html.ActionLink("Casa", "Index", "Home", new { area = "" }, new { @class = "nav-link active" })</li>
-                <li class="nav-link navbar-brand">@Html.ActionLink("Sobre Que?", "About", "Home", new { area = "" }, new { @class = "nav-link active" })</li>
-                <li class="nav-link navbar-brand">@Html.ActionLink("Contacto", "Contact", "Home", new { area = "" }, new { @class = "nav-link active" })</li>
-                <li class="nav-link navbar-brand">@Html.ActionLink("Region", "Index", "Region", new { area = "" }, new { @class = "nav-link active" })</li>
+                <li class="nav-link navbar-brand">@Html.ActionLink("Regiones", "Index", "Region", new { area = "" }, new { @class = "nav-link active" })</li>
                 <li class="nav-link navbar-brand">@Html.ActionLink("Categorias", "Index", "Categories", new { area = "" }, new { @class = "nav-link active" })</li>
-
+                <li class="nav-link navbar-brand">@Html.ActionLink("Empleados", "Index", "Employees", new { area = "" }, new { @class = "nav-link active" })</li>
             </ul>
         </div>
     </div>
