--- a/angular/src/app/components/region/region.component.html
+++ b/angular/src/app/components/region/region.component.html
@@ -1,4 +1,5 @@
 <h1 class="text-center">Regiones</h1>
+<app-region-update></app-region-update>
 <table class="table table-striped table-dark rounded-lg table-borderless justify-content-sm-center rounded"
   style="width: 18rem; margin:auto;">
   <thead>
@@ -14,10 +15,8 @@
       <td scope="row">{{item.RegionDescription}}</td>
       <td>
         <button class="btn btn-success">Editar</button>
-        <button class="btn btn-danger">Borrar</button>
+        <button class="btn btn-danger" (click)="updateRegion(item.RegionID)">Borrar</button>
       </td>
-
-
     </tr>
   </tbody>
 </table>
