--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -8,10 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="regions">Regiones</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="UpdateRegion">Editar Region</a>
+          <a class="nav-link" aria-current="page" href="categories">Categorias</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="employees">Empleados</a>
