--- a/angular/src/app/components/employees/employees.component.html
+++ b/angular/src/app/components/employees/employees.component.html
@@ -1,4 +1,4 @@
-<app-employees-new></app-employees-new>
+<app-employees-form></app-employees-form>
 <app-employees-update></app-employees-update>
 
 <table class="table table-striped table-dark rounded-lg table-borderless justify-content-sm-center rounded"
