--- a/angular/src/app/components/employees-form/employees-form.component.html
+++ b/angular/src/app/components/employees-form/employees-form.component.html
@@ -1,10 +1,11 @@
   <div class="card p-4 shadow bg-dark text-white mt-2 mb-2" style="width: 18rem; margin:auto;">
     <h2>Agregar Empleado</h2>
     <p>Ingrese datos</p>
-    <form [formGroup]="form" (ngSubmit)="onAdd()">
+    <form [formGroup]="form">
       <div class="form-group">
         <label class="text" for="txtNombre">Nombre: </label>
-        <input formControlName="FirstName" type="text" class="form-control" id="txtNombre" placeholder="Ingrese su nombre">
+        <input formControlName="FirstName" type="text" class="form-control" id="txtNombre"
+          placeholder="Ingrese su nombre">
       </div>
       <div class="form-group">
         <label class="text" for="txtApellido">Apellido: </label>
@@ -20,7 +21,7 @@
         <label class="text" for="txtCiudad">Ciudad: </label>
         <input formControlName="City" type="text" class="form-control" id="txtCiudad" placeholder="Ingrese su ciudad">
       </div>
-      <button type="submit" class="btn btn-primary mt-2" id="btn-Crear"
-        [disabled]="!this.form.valid">Crear</button>
+      <button type="submit" class="btn btn-primary mt-2" id="btn-Crear" [disabled]="!this.form.valid"
+        (click)="onAdd()">Agregar</button>
     </form>
   </div>
